# Memory-UP

./: Cargo.toml  README.md
apps/desktop/: .eslintrc.json  package.json  pnpm-lock.yaml  prettier.config.mjs  tsconfig.json
apps/desktop/src/: app.tsx  global.css  main.tsx  router.tsx
apps/desktop/src-tauri/: tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src-tauri/src/commands/: cmd_flashcards.rs  mod.rs
apps/desktop/src/components/: card-preview.tsx  create-deck.tsx  deck-card.tsx  sidebar.tsx  toggle-theme.tsx
apps/desktop/src/components/charts/: monthly-reviews-chart.tsx  quality-wise-reviews-chart.tsx
apps/desktop/src/components/ui/: button.tsx  card.tsx  (+8 more)
apps/desktop/src/hooks/: use-flashcard-input.tsx  use-valid-deck-id.tsx  use-valid-flashcard-id.tsx
apps/desktop/src/ipc/: create-deck.ts  create-flashcard.ts  find-all-decks.ts  find-deck-by-id.ts  find-flashcard-by-id.ts  find-flashcard-for-review.ts  find-flashcards-by-deck-id.ts  find-flashcards-left-for-review.ts  get-all-reviews-by-quality.ts  get-correct-percentage.ts  get-monthly-reviews.ts  get-total-flashcards-by-deck.ts  review-flashcard.ts  update-flashcard.ts
apps/desktop/src/pages/: create-flashcard.tsx  deck-details.tsx  error.tsx  flashcard-details.tsx  home.tsx  stats.tsx
apps/desktop/src/utils/: format-date-to-month.ts
crates/domain/: Cargo.toml
crates/domain/src/entities/: flashcard.rs  review.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: lib.rs
crates/sql/: Cargo.toml
crates/sql/src/repositories/: flashcards_repository.rs  reviews_repository.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs
(+6 files in other folders)
