[package]
name = "scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite", "migrate", "uuid" ] }
tokio = { workspace = true }
tauri = { workspace = true }
tauri-plugin-notification = { workspace = true }
futures = { workspace = true }

sql = { path = "../sql" }
domain = { path = "../domain" }
utils = { path = "../utils" }
